RESOLVED FIXED257870
AX: WebAccessibilityObjectWrapperIOS::accessibleElementsForObjects cannot unconditionally assume a non-null wrapper
https://bugs.webkit.org/show_bug.cgi?id=257870
Summary AX: WebAccessibilityObjectWrapperIOS::accessibleElementsForObjects cannot unc...
Tyler Wilcock
Reported 2023-06-08 15:35:53 PDT
Doing so causes crashes.
Attachments
Patch (1.48 KB, patch)
2023-06-08 15:46 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-06-08 15:36:12 PDT
Tyler Wilcock
Comment 2 2023-06-08 15:36:21 PDT
Tyler Wilcock
Comment 3 2023-06-08 15:46:06 PDT
EWS
Comment 4 2023-06-08 22:23:12 PDT
Committed 265011@main (c0fec2308ef4): <https://commits.webkit.org/265011@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466643 [details].
Note You need to log in before you can comment on or make changes to this bug.