AX: WebAccessibilityObjectWrapperIOS::accessibleElementsForObjects cannot unconditionally assume a non-null wrapper https://bugs.webkit.org/show_bug.cgi?id=257870 rdar://110454509

Reviewed by Chris Fleizach.

Prevent nullptr crashes by null-checking AXCoreObject::wrapper().

* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(accessibleElementsForObjects):

Canonical link: https://commits.webkit.org/265011@main